test/functions/vass/resolution/need-missing-return-error-1.good
need-missing-return-error-1.chpl:5: error: missing a return statement in a function with a declared return type: 'funfun'
