test/functions/vass/resolution/need-missing-return-error-1.bad
need-missing-return-error-1.chpl:2: error: illegal use of function that does not return a value: 'funfun'
